deployments/kube-system/traefik-ingress/traefik-basic-auth-middleware-kube-system.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-basic-auth
  namespace: kube-system
  annotations:
    fluxcd.io/ignore: "true"
spec:
  basicAuth:
    secret: traefik-basic-auth
