deployments/kube-system/traefik-ingress/traefik-dashboard-ingressroute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  ports:
    - name: http
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/name: traefik
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/auth-type: basic
    traefik.ingress.kubernetes.io/auth-secret: traefik-basic-auth
    ingress.kubernetes.io/custom-request-headers: l5d-dst-override:traefik-dashboard.kube-system.svc.cluster.local:9000
spec:
  rules:
    - host: traefik.home.a6.io
      http:
        paths:
            backend:
              name: traefik-dashboard
              port: 9000
